css fix to make extra buttons visible on ie6
this includes "Clear All", "Check All" buttons in /Search/Bulk.html

--- a/share/html/NoAuth/css/aileron/msie6.css
+++ b/share/html/NoAuth/css/aileron/msie6.css
@@ -105,3 +105,7 @@ div.titlebox,
     position: relative;
 }
 
+div.submit .extra-buttons {
+    float: none;
+}
+
